Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.3.0 Beta1
-
Linux, Windows
-
4e1cdab23c42d40fef474fca43fc431907cd18c1 (qtdeclarative)
Description
ASS : tst_qqmlxmlhttprequest::status(Not Found) FAIL! : tst_qqmlxmlhttprequest::status(Bad Request) 'object->property("dataOK").toBool() == true' returned FALSE. () Loc: [tst_qqmlxmlhttprequest.cpp(770)] PASS : tst_qqmlxmlhttprequest::statusText(OK) PASS : tst_qqmlxmlhttprequest::statusText(Not Found) FAIL! : tst_qqmlxmlhttprequest::statusText(Bad Request) 'object->property("dataOK").toBool() == true' returned FALSE. () Loc: [tst_qqmlxmlhttprequest.cpp(809)] PASS : tst_qqmlxmlhttprequest::responseText(OK) PASS : tst_qqmlxmlhttprequest::responseText(empty body) PASS : tst_qqmlxmlhttprequest::responseText(Not Found) FAIL! : tst_qqmlxmlhttprequest::responseText(Bad Request) 'object->property("dataOK").toBool() == true' returned FALSE. () Loc: [tst_qqmlxmlhttprequest.cpp(849)] PASS : tst_qqmlxmlhttprequest::responseXML_invalid() PASS : tst_qqmlxmlhttprequest::invalidMethodUsage() PASS : tst_qqmlxmlhttprequest::redirects() PASS : tst_qqmlxmlhttprequest::nonUtf8(responseText) PASS : tst_qqmlxmlhttprequest::nonUtf8(responseXML) PASS : tst_qqmlxmlhttprequest::document() PASS : tst_qqmlxmlhttprequest::element() PASS : tst_qqmlxmlhttprequest::attr() FAIL! : tst_qqmlxmlhttprequest::text() 'object->property("dataOK").toBool() == true' returned FALSE. () Loc: [tst_qqmlxmlhttprequest.cpp(1047)] FAIL! : tst_qqmlxmlhttprequest::cdata() 'object->property("dataOK").toBool() == true' returned FALSE. () Loc: [tst_qqmlxmlhttprequest.cpp(1059)] QDEBUG : tst_qqmlxmlhttprequest::stateChangeCallingContext() qml: failed to load testlist FAIL! : tst_qqmlxmlhttprequest::stateChangeCallingContext() 'object->property("success").toBool() == true' returned FALSE. () Loc: [tst_qqmlxmlhttprequest.cpp(1081)] PASS : tst_qqmlxmlhttprequest::cleanupTestCase() Totals: 80 passed, 6 failed, 0 skipped ********* Finished testing of tst_qqmlxmlhttprequest *********
The corresponding test in Qt Quick 1 does not have the "Bad Request" status. Is it to be expected that dataOk = false for this state?
Attachments
Issue Links
- relates to
-
QTBUG-26738 tst_qqmlxmlhttprequest::stateChangeCallingContext() sometimes fails on Windows
-
- Open
-
-
QTQAINFRA-573 Network tests block qtbase integration
-
- Closed
-
For Gerrit Dashboard: QTBUG-38180 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
82967,1 | Fix XHR auto tests always failing | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |